--- a/public/index.html
+++ b/public/index.html
@@ -208,7 +208,7 @@
 </main>
 
 <script>
-const API_BASE = '/api'; // Single endpoint on server.js
+const API_BASE = '/api/server'; // Single endpoint on server.js
 
 // Navigation
 document.querySelectorAll('nav a').forEach(a => {
@@ -463,3 +463,4 @@ loadDashboard();
 </script>
 </body>
 </html>
+
